--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-  <title>Hello World Assignment by Jane Student</title>
+  <title>Hello World Assignment by Kevin Sheen</title>
 </head>
 <body>
   <h1>Hello World</h1>
-  <p>This is a hello from Jane Student.</p>
+  <p>This is a hello from Kevin Sheen.</p>
 </body>
 </html>
